fix: header spacing

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -538,6 +538,7 @@ code {
 
 article h2 {
   line-height: var(--line-height-2xl);
+  margin-top: 0;
   margin-bottom: 0;
 }
 
